@@ -1,10 +1,32 @@
 bin_PROGRAMS = darkice
-AM_CXXFLAGS = -O2 -pedantic -Wall @DEBUG_CXXFLAGS@ @PTHREAD_CFLAGS@
-			  @JACK_CFLAGS@ 
-INCLUDES = @LAME_INCFLAGS@ @VORBIS_INCFLAGS@ @OPUS_INCFLAGS@ @FAAC_INCFLAGS@ @AACPLUS_INCFLAGS@ @TWOLAME_INCFLAGS@ \
-		@ALSA_INCFLAGS@ @PULSEAUDIO_INCFLAGS@ @JACK_INCFLAGS@ @SRC_INCFLAGS@
-LDADD = @PTHREAD_LIBS@ @LAME_LDFLAGS@ @VORBIS_LDFLAGS@ @OPUS_LDFLAGS@ @FAAC_LDFLAGS@ @AACPLUS_LDFLAGS@ @TWOLAME_LDFLAGS@ \
-		@ALSA_LDFLAGS@ @PULSEAUDIO_LDFLAGS@ @JACK_LDFLAGS@ @SRC_LDFLAGS@
+
+darkice_CXXFLAGS = \
+ -O2 -pedantic -Wall \
+ $(DEBUG_CXXFLAGS) \
+ $(PTHREAD_CFLAGS) \
+ $(LAME_CFLAGS) \
+ $(VORBIS_CFLAGS) \
+ $(OPUS_CFLAGS) \
+ $(FAAC_CFLAGS) \
+ $(AACPLUS_CFLAGS) \
+ $(TWOLAME_CFLAGS) \
+ $(ALSA_CFLAGS) \
+ $(PULSEAUDIO_CFLAGS) \
+ $(JACK_CFLAGS) \
+ $(SRC_CFLAGS)
+
+darkice_LDADD = \
+ $(PTHREAD_LIBS) \
+ $(LAME_LIBS) \
+ $(VORBIS_LIBS) \
+ $(OPUS_LIBS) \
+ $(FAAC_LIBS) \
+ $(AACPLUS_LIBS) \
+ $(TWOLAME_LIBS) \
+ $(ALSA_LIBS) \
+ $(PULSEAUDIO_LIBS) \
+ $(JACK_LIBS) \
+ $(SRC_LIBS)
 
 if HAVE_SRC_LIB
 AFLIB_SOURCE = 
